crates/tui/tests/storybook/snapshots/app_transcript_group__background_process_group_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
background process 4210 finished successfully
  tests passed

background process 4211 exited with code 1
  error: compilation failed
  see build.log

background process 4212 exited

  tip ctrl+enter / ctrl+q, steer the current response without waiting for…
────────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────
 ○ normal                                                           1:1 100%
