crates/tui/tests/storybook/snapshots/app_transcript_group__background_process_group_states.expanded.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 76 14
  0   0  45 fg=AnsiValue(117) attrs=italic
  1   2  12 attrs=dim
  3   0  42 fg=AnsiValue(117) attrs=italic
  4   2  25 attrs=dim
  5   2  13 attrs=dim
  7   0  30 fg=AnsiValue(117) attrs=italic
  9   0   6 fg=AnsiValue(208) attrs=bold
  9   6  19 fg=AnsiValue(244)
  9  25   2 fg=AnsiValue(244) attrs=dim
  9  27  47 fg=AnsiValue(244)
 10   0  76 fg=AnsiValue(237)
 11   1   1 fg=Black bg=White
 12   0  76 fg=AnsiValue(237)
 13   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 13  10  58 bg=AnsiValue(233)
 13  68   8 fg=AnsiValue(244) bg=AnsiValue(233)
