crates/tui/tests/storybook/snapshots/app_transcript_group__lsp_tool_group_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* inspect_symbol RenderNode, enum, crates/tui/**/*.rs                            14:37:03

* inspect_symbol_at crates/tui/src/content/transcript_scene.rs:26:17             14:37:03

* find_definition crates/tui/src/content/transcript_scene.rs:44:19               14:37:03
  1 definition
  - crates/core/src/transcript_model.rs:118:1

* find_references crates/tui/src/content/transcript_scene.rs:26:17               14:37:03

* diagnostics crates/tui/src/content/transcript_scene.rs                         14:37:03
  no diagnostics








─ ✿ working… ─────────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                         1:1 100%
