crates/tui/tests/storybook/snapshots/app_transcript_group__successful_background_process_group.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
background processes finished: 2








  tip ctrl+enter / ctrl+q, steer the current response without waiting for…
────────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────
 ○ normal                                                           1:1 100%
